--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "remix build",
     "dev": "remix dev --manual",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint:prettier": "prettier --check '**/*' --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint --ignore-unknown",
+    "prettier:fix": "prettier lint:prettier --write .",
+    "prepare": "husky install",
+    "elint": "eslint --ext .tsx,.ts ./app",
+    "elint:fix": "yarn lint -- --fix",
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc"
   },
@@ -29,11 +34,19 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "husky-init": "^8.0.0",
+    "lint-staged": "^15.2.0",
     "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write --ignore-unknown"
   }
 }
